@@ -1,5 +1,4 @@
 --- STUFF FOR 0.10.1 RELEASE ---
-	Ability to merge gaim, toc, aim2, aim4 buddylists
 	Third sound option for people without soundcards who still want
 		sound events.  Make a PC Speaker Beep (^G / Char 7)
 	Save Buddy Chats
